--- a/React_Lucky_Frontend/src/pages/WelcomePage/WelcomePage.scss
+++ b/React_Lucky_Frontend/src/pages/WelcomePage/WelcomePage.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   &-img {
     position: absolute;
