--- a/React_Lucky_Frontend/src/shared/components/Nav/Nav.scss
+++ b/React_Lucky_Frontend/src/shared/components/Nav/Nav.scss
@@ -1,23 +1,23 @@
 .c-navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   position: fixed;
   left: 0px;
   bottom: 0px;
-  width: 92vw;
-  height: 6vh;
-  padding: 0.5rem 1rem;
+  width: 100%;
+  height: 8vh;
   background-color: rgba(255, 255, 255, 0.986);
   box-shadow: 0 0.5rem 1rem rgb(0, 0, 0);
   z-index: 1;
   &__icon {
-    width: 30px;
-    height: 30px;
+    width: 26px;
+    height: 26px;
+    object-fit: cover;
   }
   &__img {
-    width: 38px;
-    height: 38px;
+    width: 32px;
+    height: 32px;
     border-radius: 50%;
     border: 1px solid grey;
     object-fit: cover;
