--- a/React_Lucky_Frontend/src/styles/color/_color.settings.scss
+++ b/React_Lucky_Frontend/src/styles/color/_color.settings.scss
@@ -2,4 +2,5 @@
   --color-primary: #01748e;
   --color-secondary: #fa9c93;
   --color-terciary: #0e363d;
+  --color-primary-transparent: #01748e67;
 }
