--- a/React_Lucky_Frontend/src/styles/color/_color.settings.scss
+++ b/React_Lucky_Frontend/src/styles/color/_color.settings.scss
@@ -1,6 +1,6 @@
 :root {
   --color-primary: #01748e;
   --color-secondary: #fa9c93;
-  --color-terciary: #0e363d;
+  --color-terciary: #0e363d86;
   --color-primary-transparent: #01748e67;
 }
