--- a/React_Lucky_Frontend/src/styles/color/_color.settings.scss
+++ b/React_Lucky_Frontend/src/styles/color/_color.settings.scss
@@ -3,4 +3,5 @@
   --color-secondary: #fa9c93;
   --color-terciary: #0e363d86;
   --color-primary-transparent: #01748e67;
+  --color-quaternary: #71b1bf;
 }
