--- a/React_Lucky_Frontend/src/index.css
+++ b/React_Lucky_Frontend/src/index.css
@@ -1,8 +1,14 @@
 @import "./styles/color/_color.settings.scss";
+html {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 body {
   margin: 0;
-  width: 100vw;
+  max-width: 414px;
+  max-height: 800px;
   height: 100vh;
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
