--- a/React_Lucky_Frontend/src/pages/MapPage/MapPage.scss
+++ b/React_Lucky_Frontend/src/pages/MapPage/MapPage.scss
@@ -1,6 +1,7 @@
 .c-map {
   display: flex;
   flex-direction: column;
+  width: 100%;
   &__div {
     display: flex;
     width: 100%;
@@ -9,8 +10,8 @@
     position: absolute;
     top: 14%;
     left: 0;
-    width: 100vw;
-    height: 80vh;
+    width: 100%;
+    height: 80%;
     object-fit: cover;
     object-position: top;
   }
