--- a/React_Lucky_Frontend/src/shared/components/Card/Card.scss
+++ b/React_Lucky_Frontend/src/shared/components/Card/Card.scss
@@ -2,11 +2,19 @@
   border: 3px solid var(--color-primary-transparent);
   border-radius: 8px;
   margin-bottom: 20px;
+  &__fav {
+    position: relative;
+    top: 50px;
+    left: 88%;
+    width: 24px;
+  }
 
   &__img {
+    object-fit: cover;
+    object-position: top;
     border-radius: 5px 5px 0 0;
     width: 100%;
-    height: 100%;
+    height: 240px;
     border-bottom: 2px solid var(--color-primary-transparent);
   }
   &__name {
