create profile and more buttons

--- a/React_Lucky_Frontend/src/styles/color/_color.settings.scss
+++ b/React_Lucky_Frontend/src/styles/color/_color.settings.scss
@@ -1,7 +1,8 @@
 :root {
   --color-primary: #01748e;
   --color-secondary: #fa9c93;
-  --color-terciary: #0e363d86;
-  --color-primary-transparent: #01748e67;
+  --color-terciary: #0e363d;
   --color-quaternary: #71b1bf;
+  --color-primary-transparent: #01748e67;
+  --color-terciary-transparent: #0e363d36;
 }
