--- a/React_Lucky_Frontend/src/pages/ProfilePage/ProfilePage.scss
+++ b/React_Lucky_Frontend/src/pages/ProfilePage/ProfilePage.scss
@@ -28,7 +28,7 @@
     &__button {
       display: flex;
       justify-content: space-between;
-      border: 1px solid var(--color-terciary);
+      border: 2px solid var(--color-terciary-transparent);
       width: 92vw;
       height: 6vh;
       border-radius: 6px;
