--- a/React_Lucky_Frontend/src/pages/WelcomePage/WelcomePage.scss
+++ b/React_Lucky_Frontend/src/pages/WelcomePage/WelcomePage.scss
@@ -7,14 +7,14 @@
   &-img {
     position: absolute;
     z-index: -1;
-    height: 85vh;
-    width: 100vw;
+    height: 90%;
+    width: 100%;
   }
   &__title {
     position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
-    top: 54%;
+    top: 58%;
     font-weight: 600;
     color: var(--color-terciary);
   }
@@ -38,7 +38,7 @@
   }
   &-link {
     position: absolute;
-    bottom: 18%;
+    bottom: 14%;
     width: 100%;
     text-align: center;
     text-decoration: none;
@@ -51,7 +51,7 @@
     color: var(--color-primary);
     text-align: center;
     width: 100vw;
-    bottom: 18%;
+    bottom: 14%;
     color: var(--color-terciary);
     font-weight: bold;
   }
