--- a/React_Lucky_Frontend/src/pages/WelcomePage/WelcomePage.scss
+++ b/React_Lucky_Frontend/src/pages/WelcomePage/WelcomePage.scss
@@ -9,6 +9,7 @@
     z-index: -1;
     height: 90%;
     width: 100%;
+    max-width: 450px;
   }
   &__title {
     position: absolute;
@@ -18,6 +19,19 @@
     font-weight: 600;
     color: var(--color-terciary);
   }
+  &-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    &-button {
+      margin-bottom: 10px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
   &__btn {
     cursor: pointer;
     font-size: 16px;
@@ -25,6 +39,7 @@
     width: 50%;
     height: 50px;
     border-radius: 5px;
+    max-width: 450px;
     border: 1px solid #ccc;
     color: rgb(226, 222, 222);
     text-align: center;
