--- a/React_Lucky_Frontend/src/pages/MapPage/MapPage.scss
+++ b/React_Lucky_Frontend/src/pages/MapPage/MapPage.scss
@@ -14,6 +14,11 @@
     height: 80%;
     object-fit: cover;
     object-position: top;
+    image-rendering: -moz-crisp-edges; /* Firefox */
+    image-rendering: -o-crisp-edges; /* Opera */
+    image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
   }
   &__input {
     position: absolute;
@@ -32,6 +37,11 @@
     right: 20%;
     width: 24px;
     height: 24px;
+    image-rendering: -moz-crisp-edges; /* Firefox */
+    image-rendering: -o-crisp-edges; /* Opera */
+    image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
     &--filter {
       right: 4%;
     }
