--- a/React_Lucky_Frontend/src/pages/AdopcionPage/AdopcionPage.scss
+++ b/React_Lucky_Frontend/src/pages/AdopcionPage/AdopcionPage.scss
@@ -24,6 +24,10 @@
       border-radius: 18px;
       font-size: 10px;
       padding-left: 6%;
+      &:focus {
+        outline: none !important;
+        border-color: var(--color-secondary);
+      }
     }
     &__logo {
       position: relative;
