--- a/React_Lucky_Frontend/src/pages/MapPage/MapPage.scss
+++ b/React_Lucky_Frontend/src/pages/MapPage/MapPage.scss
@@ -22,7 +22,7 @@
   }
   &__input {
     position: absolute;
-    top: 6%;
+    top: 5%;
     left: 4%;
     width: 75%;
     height: 28px;
@@ -30,10 +30,14 @@
     border-radius: 18px;
     font-size: 10px;
     padding-left: 6%;
+    &:focus {
+      outline: none !important;
+      border-color: var(--color-secondary);
+    }
   }
   &__logo {
     position: absolute;
-    top: 6.5%;
+    top: 5.5%;
     right: 20%;
     width: 24px;
     height: 24px;
@@ -45,5 +49,12 @@
     &--filter {
       right: 4%;
     }
+  }
+  &__googleMaps {
+    position: absolute;
+    top: 11vh;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
