--- a/React_Lucky_Frontend/src/pages/HomePage/HomePage.scss
+++ b/React_Lucky_Frontend/src/pages/HomePage/HomePage.scss
@@ -44,6 +44,7 @@
 }
 
 .c-home-box2{
+  margin-top: 5%;
   border: 2px solid var(--color-primary-transparent);
   height: 50px;
   margin-bottom: 10%;
@@ -80,6 +81,7 @@
 }
 
 .c-home-box3{
+  margin-top: 5%;
   border: 2px solid var(--color-primary-transparent);
   height: 50px;
   margin-bottom: 10%;
