--- a/React_Lucky_Frontend/src/styles/color/_color.settings.scss
+++ b/React_Lucky_Frontend/src/styles/color/_color.settings.scss
@@ -5,4 +5,5 @@
   --color-quaternary: #71b1bf;
   --color-primary-transparent: #01748e67;
   --color-terciary-transparent: #0e363d36;
+  --color-primary-shadow: rgb(189, 210, 214);
 }
