--- a/React_Lucky_Frontend/src/pages/AdopcionPage/AdopcionPage.scss
+++ b/React_Lucky_Frontend/src/pages/AdopcionPage/AdopcionPage.scss
@@ -1,8 +1,13 @@
 .c-adopcion {
   max-width: 100vw;
   margin: 0 30px;
-
   height: 92vh;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  overflow-x: hidden;
+  &::-webkit-scrollbar {
+    display: none;
+  }
   &__button {
     display: flex;
     justify-content: space-between;
