--- a/React_Lucky_Frontend/src/pages/HomePage/HomePage.scss
+++ b/React_Lucky_Frontend/src/pages/HomePage/HomePage.scss
@@ -3,6 +3,9 @@
   width: 100%;
   height: 83vh;
   overflow-x: hidden;
+  &__title {
+    margin: 20px;
+  }
 
   .swiper-pagination {
     position: sticky;
@@ -28,7 +31,7 @@
     margin-bottom: 10%;
     background-color: var(--color-primary-shadow);
     border-radius: 8px;
-    box-shadow: 10px 5px 5px var(--color-primary-transparent);
+    box-shadow: 0px 5px 5px var(--color-primary-transparent);
     background-image: url(../../assets/PerfilAnimales/huella.png);
     background-repeat: repeat;
     background-size: small;
@@ -95,5 +98,5 @@
   height: 100%;
   position: relative;
   transition-property: transform;
-  margin: 10px;
+  margin: 6px;
 }
