--- a/React_Lucky_Frontend/src/shared/components/Card/Card.scss
+++ b/React_Lucky_Frontend/src/shared/components/Card/Card.scss
@@ -21,6 +21,8 @@
     margin: 0 0 2px 0;
     font-size: 24px;
     padding: 10px;
+    text-decoration: none;
+    color: var(--color-primary);
   }
   &__footer {
     display: flex;
