--- a/React_Lucky_Frontend/src/pages/HomePage/HomePage.scss
+++ b/React_Lucky_Frontend/src/pages/HomePage/HomePage.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 91vh;
   overflow-x: hidden;
+  margin: inherit;
   &__title {
     margin: 20px;
     font-weight: 600;
@@ -23,6 +24,7 @@
   }
   &__h3 {
     font-weight: 600;
+    margin: inherit;
   }
 
   &-box {
@@ -83,6 +85,7 @@
   border-right: 2px solid var(--color-secondary);
   border-left: 2px solid var(--color-secondary);
   border-radius: 6px;
+  margin: inherit;
   &__img {
     width: 100%;
   }
