--- a/React_Lucky_Frontend/src/pages/ProfilePage/ProfilePage.scss
+++ b/React_Lucky_Frontend/src/pages/ProfilePage/ProfilePage.scss
@@ -5,11 +5,10 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  padding: 0;
-  margin: 0;
+
   &-header {
-    position: absolute;
-    top: 5%;
+    position: relative;
+    top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
