--- a/React_Lucky_Frontend/src/shared/components/AuthButton/AuthButton.scss
+++ b/React_Lucky_Frontend/src/shared/components/AuthButton/AuthButton.scss
@@ -1,4 +1,8 @@
 .c-auth {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   &__p {
     margin: 5% 8%;
     position: absolute;
