--- a/React_Lucky_Frontend/src/shared/components/AuthButton/AuthButton.scss
+++ b/React_Lucky_Frontend/src/shared/components/AuthButton/AuthButton.scss
@@ -3,12 +3,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: red;
   &__p {
     margin: 5% 8%;
     position: absolute;
     font-size: 22px;
     font-weight: 500;
     top: 26%;
+    text-align: center;
   }
 
   &__btn {
