--- a/React_Lucky_Frontend/src/pages/AdopcionPage/AdopcionPage.scss
+++ b/React_Lucky_Frontend/src/pages/AdopcionPage/AdopcionPage.scss
@@ -1,10 +1,10 @@
-.c-adopcion {
+.c-adopcionPage {
   max-width: 100vw;
   margin: 0 30px;
-  height: 92vh;
+  height: 90vh;
+  overflow-x: hidden;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
-  overflow-x: hidden;
   &::-webkit-scrollbar {
     display: none;
   }
