--- a/React_Lucky_Frontend/src/pages/MascotasDetailPage/MascotasDetailPage.scss
+++ b/React_Lucky_Frontend/src/pages/MascotasDetailPage/MascotasDetailPage.scss
@@ -1,5 +1,5 @@
 .c-detail {
-    -ms-overflow-style: none; /* IE and Edge */
+  -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   overflow-x: hidden;
   &::-webkit-scrollbar {
@@ -7,20 +7,19 @@
   }
   width: 100%;
 
-&__arrow {
+  &__arrow {
     width: 32px;
     position: absolute;
     top: 2%;
     left: 2%;
-}
-&__img {
+  }
+  &__img {
     width: 100vw;
     height: 275px;
     object-fit: cover;
-    
-}
+  }
 
-&__box {
+  &__box {
     width: 60%;
     height: 10%;
     background-color: red;
@@ -33,104 +32,100 @@
     justify-content: space-between;
 
     &__img {
-        width: 20px;
-        height: 20px;
+      margin-top: 4px;
+      width: 20px;
+      height: 20px;
     }
 
-    &__left{
-       margin: 10px;
-       display: flex;
-       gap: 8px;
+    &__left {
+      margin: 10px;
+      display: flex;
+      gap: 8px;
     }
 
-    &__middle{
-        display: flex;
-        flex-direction: column;
-        color: rgb(44, 44, 44);
+    &__middle {
+      display: flex;
+      flex-direction: column;
+      color: rgb(44, 44, 44);
 
-         &__p1{
-             margin: 0;
-             font-size: 18px;
-             font-weight: 500;
-         }
+      &__p1 {
+        margin: 0;
+        font-size: 18px;
+        font-weight: 500;
+      }
 
-         &__p2{
-             margin: 0;
-             font-weight: lighter;
-             font-size: 12px;
-         }
+      &__p2 {
+        margin: 0;
+        font-weight: lighter;
+        font-size: 12px;
+      }
     }
 
     &__right {
-        margin: 10px;
-       
-        &__img{
-            margin: 2px;
-        }
+      margin: 10px;
+
+      &__img {
+        margin: 2px;
+      }
     }
-}
-&__tag {
+  }
+  &__tag {
     margin-top: 64px;
- display: flex;
- justify-content: space-around;
- margin: 16px;
-
- &__h4{
-    font-weight: lighter;
-    color: rgb(44, 44, 44);
-    width: 120px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-   
+    justify-content: space-around;
+    margin: 16px;
 
-    
-    
- }
- 
- &__h4-active{
-        color: var(--color-primary);
-        border-bottom: 2px solid var(--color-secondary);
-        width: 120px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-       
+    &__h4 {
+      font-weight: lighter;
+      color: rgb(44, 44, 44);
+      width: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
+
+    &__h4-active {
+      color: var(--color-primary);
+      border-bottom: 2px solid var(--color-secondary);
+      width: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
-
-}
-
-
 
 .btn {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    border-radius: 20px;
-    margin-top: 20px;
-     
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  border-radius: 20px;
+  margin-top: 20px;
 
-    &__1{
-        color: var(--color-secondary);
-        background-color: transparent;
-        border-radius: 5px;
-        padding: 7px;
-        width: 100px;
-        box-shadow: none;
-        border: solid 2px var(--color-secondary);
-    }
-    &__2{
-        color: white;
-        background-color: var(--color-secondary);
-        border-radius: 5px;
-        padding: 7px;
-        width: 100px;
-        box-shadow: none;
-        border: solid 2px var(--color-secondary);
-        
-    }
+  &__1 {
+    color: var(--color-secondary);
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 7px;
+    width: 100px;
+    box-shadow: none;
+    border: solid 2px var(--color-secondary);
+  }
+  &__2 {
+    color: white;
+    background-color: var(--color-secondary);
+    border-radius: 5px;
+    padding: 7px;
+    width: 100px;
+    box-shadow: none;
+    border: solid 2px var(--color-secondary);
+  }
 }
 
+.prueba {
+  position: absolute;
+  top: 120vh;
+  left: 100px;
+}
