--- a/React_Lucky_Frontend/src/shared/components/Advertencia/Advertencia.scss
+++ b/React_Lucky_Frontend/src/shared/components/Advertencia/Advertencia.scss
@@ -1,51 +1,57 @@
-.c-advertencia{
-    width: 70%;
-    padding: 30px;
-    margin-left: 8%;
-    margin-top: 10%;
-    border: 2px solid black;
-    border-radius: 10px;
-    &__title{
-        display: flex;
-        justify-content: center;
-        margin-top: 5%;
-        font-weight: bold;
-        font-size: 28px;
-    }
-    &__texto{
-        color: black;
-        text-align: center;
-        margin-bottom: 10%;
-        font-weight: normal;
-        font-size: 18px;
-    }
-    &__img{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin-bottom: 10%;
-    }
-    &__subtitle{
-        text-align: center;
-    }
-    &__boton{
-        width: 50%;
-        padding: 15px;
-        font-size: 18px;
-        background: none;
-        color: var(--color-secondary);
-        border-bottom: none;
-        border-left: none;
-        margin-bottom: -15px;
-    }
-    &__boton2{
-        width: 50%;
-        padding: 15px;
-        font-size: 18px;
-        background: none;
-        border-bottom: none;
-        border-right: none;
-        border-left: none;
-        margin-bottom: -15px;
-    }
+.c-advertencia {
+  width: 70%;
+  height: 80vh;
+  padding: 30px;
+  margin-left: 8%;
+  margin-top: 10%;
+  border: 2px solid rgba(0, 0, 0, 0.308);
+  border-radius: 10px;
+  background-color: white;
+  &__title {
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    font-weight: bold;
+    font-size: 28px;
+  }
+  &__texto {
+    color: black;
+    text-align: center;
+    margin-bottom: 10%;
+    font-weight: normal;
+    font-size: 18px;
+  }
+  &__img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10%;
+  }
+  &__subtitle {
+    text-align: center;
+  }
+  &__boton {
+    width: 50%;
+    padding: 15px;
+    font-size: 18px;
+    background: none;
+    color: var(--color-secondary);
+    border-left: none;
+    margin-bottom: -15px;
+    border: 1px solid var(--color-primary-transparent);
+    border-bottom: none;
+    border-left: none;
+  }
+  &__boton2 {
+    width: 50%;
+    padding: 15px;
+    font-size: 18px;
+    background: none;
+    border-right: none;
+    border-left: none;
+    margin-bottom: -15px;
+    border: 1px solid var(--color-primary-transparent);
+    border-bottom: none;
+    border-right: none;
+  }
 }
