--- a/React_Lucky_Frontend/src/shared/components/Advertencia/Advertencia.scss
+++ b/React_Lucky_Frontend/src/shared/components/Advertencia/Advertencia.scss
@@ -36,19 +36,19 @@
     font-size: 18px;
     background: none;
     color: var(--color-secondary);
-    border-left: none;
+
     margin-bottom: -15px;
     border: 1px solid var(--color-primary-transparent);
     border-bottom: none;
     border-left: none;
+    border-right: none;
   }
   &__boton2 {
     width: 50%;
     padding: 15px;
     font-size: 18px;
     background: none;
-    border-right: none;
-    border-left: none;
+    color: var(--color-primary);
     margin-bottom: -15px;
     border: 1px solid var(--color-primary-transparent);
     border-bottom: none;
