--- a/React_Lucky_Frontend/src/shared/components/Slider/Slider.scss
+++ b/React_Lucky_Frontend/src/shared/components/Slider/Slider.scss
@@ -5,6 +5,10 @@
   justify-content: center;
   width: 100%;
   height: 80vh;
+  .swiper-slide {
+    margin: 0px;
+  }
+
   .swiper-pagination-bullet-active {
     background-color: var(--color-secondary);
   }
