--- a/React_Lucky_Frontend/src/shared/components/Advertencia/Advertencia.scss
+++ b/React_Lucky_Frontend/src/shared/components/Advertencia/Advertencia.scss
@@ -36,9 +36,8 @@
     font-size: 18px;
     background: none;
     color: var(--color-secondary);
-
     margin-bottom: -15px;
-    border: 1px solid var(--color-primary-transparent);
+    border: 1px solid var(--color-terciary-transparent);
     border-bottom: none;
     border-left: none;
     border-right: none;
@@ -48,9 +47,9 @@
     padding: 15px;
     font-size: 18px;
     background: none;
-    color: var(--color-primary);
+    color: #01748ecb;
     margin-bottom: -15px;
-    border: 1px solid var(--color-primary-transparent);
+    border: 1px solid var(--color-terciary-transparent);
     border-bottom: none;
     border-right: none;
   }
