--- a/React_Lucky_Frontend/src/shared/components/Enviado/Enviado.scss
+++ b/React_Lucky_Frontend/src/shared/components/Enviado/Enviado.scss
@@ -2,9 +2,11 @@
     width: 70%;
     padding: 30px;
     margin-left: 8%;
-    margin-top: 10%;
-    border: 2px solid black;
+    margin-top: 16%;
     border-radius: 10px;
+    background-color: white;
+ 
+
     &__title{
         display: flex;
         justify-content: center;
