--- a/React_Lucky_Frontend/src/styles/color/_color.settings.scss
+++ b/React_Lucky_Frontend/src/styles/color/_color.settings.scss
@@ -1,6 +1,7 @@
 :root {
   --color-primary: #01748e;
   --color-secondary: #fa9c93;
+  --color-secondary-transparent: #ffdad7;
   --color-terciary: #0e363d;
   --color-quaternary: #71b1bf;
   --color-primary-transparent: #01748e67;
