--- a/React_Lucky_Frontend/src/pages/ProfilePage/ProfilePage.scss
+++ b/React_Lucky_Frontend/src/pages/ProfilePage/ProfilePage.scss
@@ -13,9 +13,10 @@
     align-items: center;
     justify-content: center;
     &__img {
-      width: 24%;
-      height: 24%;
+      width: 100px;
+      height: 100px;
       object-fit: cover;
+      object-position: top;
       border-radius: 50%;
       border: 4px solid var(--color-primary);
       image-rendering: -moz-crisp-edges; /* Firefox */
@@ -28,6 +29,11 @@
   &-top {
     position: absolute;
     top: 20%;
+    &__link {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+    }
     &__button {
       display: flex;
       justify-content: space-between;
