--- a/React_Lucky_Frontend/src/shared/components/EstadoAdopcion/EstadoAdopcion.scss
+++ b/React_Lucky_Frontend/src/shared/components/EstadoAdopcion/EstadoAdopcion.scss
@@ -3,9 +3,32 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  &__arrow{
+    width: 28px;
+    height: 28px;
+    position: absolute;
+    left: 10px;
+    top: 5%;
+  }
+
+  &__input{
+    position: absolute;
+    top: 5%;
+    left: 14%;
+    width: 64%;
+    height: 28px;
+    border: 1px solid var(--color-primary-transparent);
+    border-radius: 18px;
+    font-size: 14px;
+    padding-left: 6%;
+    &:focus {
+      outline: none;
+      border-color: var(--color-secondary);
+    }
+  }
   &-adopcion {
     width: 90vw;
-    height: 20vh;
+    height: 22vh;
     border-radius: 8px;
     border: 1px solid var(--color-primary-transparent);
     &__top {
@@ -40,10 +63,13 @@
           width: 90px;
           height: 90px;
           border-radius: 50%;
-          border: 2px solid var(--color-primary-transparent);
+          border: 3px solid var(--color-primary-transparent);
         }
       }
       &__right {
+        position: relative;
+        left: 3.5%;
+        top: 7px;
         &__p {
           font-size: 14px;
           display: flex;
