--- a/React_Lucky_Frontend/src/pages/AnimalsFilter/AnimalsFilter.scss
+++ b/React_Lucky_Frontend/src/pages/AnimalsFilter/AnimalsFilter.scss
@@ -33,6 +33,10 @@ ul{
                 text-align: center;
             }
         }
+
+        &__selected{
+            
+        }
     }
 
     &__title{
