--- a/React_Lucky_Frontend/src/shared/components/CustomPopup/custom-popup.module.css
+++ b/React_Lucky_Frontend/src/shared/components/CustomPopup/custom-popup.module.css
@@ -6,13 +6,13 @@
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
+  transition: opacity 200ms;
 }
 .popup {
   background: rgba(255, 255, 255, 0.24);
   border-radius: 5px;
   position: relative;
-  transition: all 5s ease-in-out;
+  transition: all 0.8 ease-in-out;
 }
 
 .popup h2 {
