--- a/React_Lucky_Frontend/src/shared/components/AdopcionDetail/AdopcionDetail.scss
+++ b/React_Lucky_Frontend/src/shared/components/AdopcionDetail/AdopcionDetail.scss
@@ -30,7 +30,8 @@
           justify-content: center;
           align-items: center;
           color: var(--color-primary);
-          border-bottom: 2px solid orange;
+          border-bottom: 2px solid var(--color-secondary);
+          width: 120px;
         }
       }
     }
