--- a/React_Lucky_Frontend/src/shared/components/EstadoAdopcion/EstadoAdopcion.scss
+++ b/React_Lucky_Frontend/src/shared/components/EstadoAdopcion/EstadoAdopcion.scss
@@ -1,9 +1,8 @@
 .c-estado {
-  margin-top: 20%;
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding-bottom: 10%;
+
   &__arrow {
     width: 28px;
     height: 28px;
@@ -22,6 +21,7 @@
     border-radius: 18px;
     font-size: 14px;
     padding-left: 6%;
+    margin-bottom: 10%;
     &:focus {
       outline: none;
       border-color: var(--color-secondary);
@@ -32,6 +32,7 @@
     height: 22vh;
     border-radius: 8px;
     border: 1px solid var(--color-primary-transparent);
+    margin-bottom: 16px;
     &__link {
       text-decoration: none;
       color: var(--color-primary);
@@ -86,4 +87,8 @@
       }
     }
   }
+}
+
+.c-detailSection {
+  margin-top: 20px;
 }
